posix: Fix return value of system if shell can not be executed [BZ #27053]

POSIX states that system returned code for failure to execute the shell
shall be as if the shell had terminated using _exit(127).  This
behaviour was removed with 5fb7fc96350575.

Checked on x86_64-linux-gnu.